--- a/documentation/asciidoc/topics/proc_exchanging_sa_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_exchanging_sa_tokens.adoc
@@ -3,9 +3,9 @@
 
 [role="_abstract"]
 After you create service account tokens on your {openshiftshort} clusters, you
-add them to secrets on each backup location. For example, at **LON** you add
-the service account token for **NYC**. At **NYC** you add the service account
-token for **LON**.
+add them to secrets on each backup location.
+For example, at **LON** you add the service account token for **NYC**.
+At **NYC** you add the service account token for **LON**.
 
 .Prerequisites
 
