--- a/documentation/asciidoc/topics/proc_creating_service_monitor.adoc
+++ b/documentation/asciidoc/topics/proc_creating_service_monitor.adoc
@@ -8,10 +8,11 @@
 
 Enable monitoring for user-defined projects on {ocp}.
 
-When the `ServiceMonitor` resource is detected, {ispn_operator} does the following:
+When the Operator detects an `Infinispan` CR with the monitoring annotation set to `true`, which is the default, {ispn_operator} does the following:
 
 * Creates a `ServiceMonitor` named `<cluster_name>-monitor`.
-* Adds the `infinispan.org/monitoring: 'true'` annotation to your `Infinispan` CR:
+* If the annotation wasn't explicitly set to true, adds `infinispan.org/monitoring: 'true'` annotation to your `Infinispan` CR  metatada:
+
 +
 [source,yaml,options="nowrap",subs=attributes+]
 ----
