--- a/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
@@ -23,10 +23,10 @@ endif::downstream[]
 * `spec.service.sites.local.expose.nodePort` if you use `NodePort`.
 * `spec.service.sites.local.expose.port` if you use `LoadBalancer`.
 +
-. Specify the number of nodes that can send RELAY messages with the `service.sites.local.maxRelayNodes` field.
+. Specify the number of pods that can send RELAY messages with the `service.sites.local.maxRelayNodes` field.
 +
-You should configure all nodes in the cluster to send RELAY messages for better performance.
-This allows all nodes to send replication requests to backup locations directly, rather than forwarding the requests to relay nodes.
+You should configure all pods in the cluster to send RELAY messages for better performance.
+This allows all pods to send replication requests to backup locations directly, rather than forwarding the requests to relay pods.
 +
 . Provide the name, URL, and secret for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
 . If {brandname} cluster names or namespaces at the remote site do not match the local site, specify those values with the `clusterName` and `namespace` fields.
