--- a/documentation/asciidoc/topics/ref_custom_encryption_secrets.adoc
+++ b/documentation/asciidoc/topics/ref_custom_encryption_secrets.adoc
@@ -2,7 +2,7 @@
 = Custom encryption secrets
 
 [role="_abstract"]
-This topic describes resources for custom encryption secrets.
+Custom encryption secrets that add keystores or certificate/key pairs to secure {brandname} connections must contain specific fields.
 
 .Keystore secrets
 [source,options="nowrap",subs=attributes+]
