--- a/documentation/asciidoc/topics/con_managed_cross_site_connections.adoc
+++ b/documentation/asciidoc/topics/con_managed_cross_site_connections.adoc
@@ -14,12 +14,12 @@ ifdef::downstream[]
 image::operator-cross-site.png[This diagram depicts two clusters in separate data centers that use RELAY messages for cross-site replication.]
 endif::downstream[]
 
-Managed cross-site connections use tunnel pods to send RELAY messages to the correct cluster.
-These tunnel pods are GossipRouter instances that keep a record of all IP addresses for nodes in the cluster.
+Managed cross-site connections use router pods to send RELAY messages to the correct cluster.
+These router pods are GossipRouter instances that keep a record of all IP addresses for pods in the cluster.
 
 To manage cross-site connections, {ispn_operator}:
 
-. Creates a tunnel pod for each cluster.
+. Creates a router pod for each cluster.
 . Uses the Kubernetes API to retrieve IP addresses for the `<cluster_name>-site` service at each cluster.
 +
 [IMPORTANT]
@@ -27,19 +27,19 @@ To manage cross-site connections, {ispn_operator}:
 {ispn_operator} in each {openshiftshort} cluster must have network access to the remote Kubernetes API.
 ====
 +
-. Provides the `<cluster_name>-site` service details to all nodes that send RELAY messages for cross-site replication.
+. Provides the `<cluster_name>-site` service details to all pods that send RELAY messages for cross-site replication.
 
-Relay nodes can then connect to tunnel pods through the `<cluster_name>-site` service and perform cross-site replication.
+Relay pods can then connect to router pods through the `<cluster_name>-site` service and perform cross-site replication.
 
 [discrete]
 == How managed cross-site connections work
 
-You configure the number of nodes in each cluster that can send RELAY messages for cross-site replication with the `sites.local.maxRelayNodes` field.
-Those nodes send RELAY messages to tunnel pods at random.
-The tunnel pods then parse the RELAY message headers to forward cross-site replication requests to the correct backup cluster.
+You configure the number of pods in each cluster that can send RELAY messages for cross-site replication with the `sites.local.maxRelayNodes` field.
+Those relay pods send RELAY messages to router pods at random.
+The router pods then parse the RELAY message headers to forward cross-site replication requests to the correct backup cluster.
 
-If a tunnel pod crashes then all nodes send RELAY messages to any other available tunnel pod because {ispn_operator} provides the IP addresses for all tunnel pods to all clusters.
-When this happens {k8s} automatically creates a new tunnel pod in the cluster to handle RELAY messages.
+If a router pod crashes then all relay pods send RELAY messages to any other available router pod because {ispn_operator} provides the IP addresses for all router pods to all clusters.
+When this happens {k8s} automatically creates a new router pod in the cluster to handle RELAY messages.
 
 [NOTE]
 ====
