--- a/documentation/asciidoc/topics/ref_cross_site_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cross_site_resources.adoc
@@ -33,7 +33,7 @@ The following tables provides fields and descriptions for cross-site resources.
 |Specifies the network port for the service if you expose {brandname} through a `LoadBalancer`. The default port is `7900`.
 
 |`service.sites.local.maxRelayNodes`
-|Specifies the maximum number of nodes that can send RELAY messages for cross-site replication. The default value is `1`.
+|Specifies the maximum number of pods that can send RELAY messages for cross-site replication. The default value is `1`.
 
 |===
 
