--- a/documentation/asciidoc/stories/assembly_cache_cr.adoc
+++ b/documentation/asciidoc/stories/assembly_cache_cr.adoc
@@ -6,31 +6,15 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 Use `Cache` CRs to add cache configuration with {ispn_operator} and control how {brandname} stores your data.
 
-//Community
-ifdef::community[]
-[IMPORTANT]
-====
-The `Cache` CR is not yet functionally complete.
-The capability to create caches with {ispn_operator} is still under development and not recommended for production environments or critical workloads.
-====
-endif::community[]
-
-//Downstream
-ifdef::downstream[]
-[IMPORTANT]
-====
-Creating caches with {ispn_operator} is available as a technology preview.
-====
-
-include::{topics}/ref_tech_preview.adoc[leveloffset=+1]
-endif::downstream[]
-
 include::{topics}/con_caches.adoc[leveloffset=+1]
 include::{topics}/con_cache_cr.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+1]
-
 include::{topics}/proc_adding_cache_stores.adoc[leveloffset=+1]
+
+//Cache Service
+include::{topics}/proc_creating_caches_cache_service.adoc[leveloffset=+1]
+include::{topics}/ref_default_cache_service_config.adoc[leveloffset=+2]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
