--- a/documentation/asciidoc/stories/assembly_creating_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_clusters.adoc
@@ -1,13 +1,14 @@
 ifdef::context[:parent-context: {context}]
 [id='creating-clusters']
-:context: infinispan-cr
-= Getting started with Infinispan CR
+:context: creating-clusters
+= Creating {brandname} clusters
 
 [role="_abstract"]
-After you install {ispn_operator}, learn how to create {brandname} clusters on {k8s}.
+Create {brandname} clusters running on {k8s} with the `Infinispan` CR or with the native {brandname} CLI plugin for `{kube_client}` clients.
 
 include::{topics}/con_infinispan_cr.adoc[leveloffset=+1]
-include::{topics}/proc_creating_minimal_clusters.adoc[leveloffset=+1]
+include::{topics}/proc_creating_clusters_client.adoc[leveloffset=+1]
+include::{topics}/proc_creating_clusters_native_plugin.adoc[leveloffset=+1]
 include::{topics}/proc_verifying_clusters.adoc[leveloffset=+1]
 include::{topics}/proc_stopping_starting.adoc[leveloffset=+1]
 
