--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -1,3 +1,4 @@
+include::{stories}/assembly_installing_native_cli_plugin.adoc[leveloffset=+1]
 include::{stories}/assembly_installing_operator.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_services.adoc[leveloffset=+1]
@@ -10,7 +11,7 @@ include::{stories}/assembly_cross_site_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
-include::{stories}/assembly_creating_caches.adoc[leveloffset=+1]
+include::{stories}/assembly_cache_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
 include::{stories}/assembly_deploying_code.adoc[leveloffset=+1]
