issue #1322 upgrade type docs

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -2,6 +2,7 @@ include::{stories}/assembly_installing_native_cli_plugin.adoc[leveloffset=+1]
 include::{stories}/assembly_installing_operator.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_clusters.adoc[leveloffset=+1]
+include::{stories}/assembly_upgrading_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_services.adoc[leveloffset=+1]
 include::{stories}/assembly_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_client_certificates.adoc[leveloffset=+1]
