--- a/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
@@ -23,6 +23,9 @@ include::yaml/datagrid_service.yaml[]
 |`spec.replicas`
 |Specifies the number of pods in your cluster.
 
+|`spec.upgrades.type`
+|Controls how {ispn_operator} upgrades your {brandname} cluster when new versions become available.
+
 |`spec.service.type`
 |Configures the type {brandname} service. A value of `DataGrid` creates a cluster with {datagridservice} pods.
 
