--- a/documentation/asciidoc/topics/con_cluster_upgrades.adoc
+++ b/documentation/asciidoc/topics/con_cluster_upgrades.adoc
@@ -27,4 +27,10 @@ To perform a Hot Rod rolling upgrade, {ispn_operator} does the following:
 . Redirects all clients to the new cluster.
 . Removes the existing cluster when all data and client connections are transferred to the new cluster.
 
-//-
+[IMPORTANT]
+====
+You should not perform Hot Rod rolling upgrades with caches that enable passivation with persistent cache stores.
+In the event that the upgrade does not complete successfully, passivation can result in data loss when {ispn_operator} rolls back the target cluster.
+
+If your cache configuration enables passivation you should perform a shutdown upgrade.
+====
