--- a/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
@@ -1,7 +1,7 @@
 ifdef::context[:parent-context: {context}]
 [id='setting-up-xsite']
 :context: cross-site
-= Replicating data across clusters
+= Setting up cross-site replication
 
 [role="_abstract"]
 Ensure availability with {ispn_operator} by configuring geographically distributed clusters as a unified service.
@@ -18,12 +18,12 @@ You must ensure that {brandname} clusters establish connections in the same way 
 ====
 
 include::{topics}/con_managed_cross_site_connections.adoc[leveloffset=+1]
-include::{topics}/proc_creating_sa_tokens_ocp.adoc[leveloffset=+1]
+include::{topics}/proc_creating_sa_tokens_ocp.adoc[leveloffset=+2]
 include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+2]
 ifdef::community[]
-include::{topics}/proc_setting_up_cross_site_kube.adoc[leveloffset=+1]
+include::{topics}/proc_setting_up_cross_site_kube.adoc[leveloffset=+2]
 endif::community[]
-include::{topics}/proc_configuring_sites_automatically.adoc[leveloffset=+1]
+include::{topics}/proc_configuring_sites_automatically.adoc[leveloffset=+2]
 include::{topics}/proc_configuring_sites_manually.adoc[leveloffset=+1]
 include::{topics}/ref_cross_site_resources.adoc[leveloffset=+1]
 include::{topics}/proc_securing_cross_site_connections.adoc[leveloffset=+1]
