--- a/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
@@ -1,5 +1,5 @@
 [id='configuring-sites-automatically_{context}']
-= Configuring {ispn_operator} to manage cross-site connections
+= Configuring managed cross-site connections
 
 [role="_abstract"]
 Configure {ispn_operator} to establish cross-site views with {brandname} clusters.
@@ -25,8 +25,11 @@ endif::downstream[]
 +
 . Specify the number of pods that can send RELAY messages with the `service.sites.local.maxRelayNodes` field.
 +
-You should configure all pods in the cluster to send RELAY messages for better performance.
-This allows all pods to send replication requests to backup locations directly, rather than forwarding the requests to relay pods.
+[TIP]
+====
+Configure all pods in your cluster to send `RELAY` messages for better performance.
+If all pods send backup requests directly, then no pods need to forward backup requests.
+====
 +
 . Provide the name, URL, and secret for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
 . If {brandname} cluster names or namespaces at the remote site do not match the local site, specify those values with the `clusterName` and `namespace` fields.
